--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,10 @@ module:
       target: i18n
     - source: archetypes
       target: archetypes
+    - source: functions
+      target: layouts/partials/mod-wowchemy-cms
+    - source: templates
+      target: layouts/wowchemycms
 security:
   funcs:
     getenv:
@@ -48,6 +52,9 @@ mediaTypes:
   text/netlify:
     delimiter: ''
     suffixes: ['']
+  application/yaml:
+    suffixes:
+      - yml
 outputFormats:
   headers:
     baseName: _headers
@@ -59,3 +66,8 @@ outputFormats:
     isPlainText: true
     mediatype: text/netlify
     notAlternative: true
+  wowchemycms_config:
+    baseName: config
+    isPlainText: true
+    mediatype: application/yaml
+    notAlternative: false
