--- a/example/config/_default/config.yaml
+++ b/example/config/_default/config.yaml
@@ -1,11 +1,5 @@
-# Configuration of Hugo
-# Guide: https://wowchemy.com/docs/getting-started/
-# Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
-# This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 baseurl: 'https://example.com/' # Website URL
-title: Hugo Academic Blog Theme # Website name
-copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
@@ -17,11 +11,22 @@ defaultContentLanguageInSubdir: false
 removePathAccents: true
 
 ############################
+## PERMALINKS
+############################
+
+permalinks:
+  post: '/post/:slug'
+  authors: '/author/:slug/'
+  tags: '/tag/:slug/'
+  categories: '/category/:slug/'
+
+############################
 ## MODULES
 ############################
 
 module:
   imports:
+#    - path: github.com/<xxx>/wowchemy-module-<xxx>
     - path: github.com/alphabiz-se2/wowchemy-proto
 
 ############################
@@ -35,10 +40,6 @@ enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
 ignoreFiles: [\.ipynb$, .ipynb_checkpoints$, \.Rmd$, \.Rmarkdown$, _cache$]
-permalinks:
-  authors: '/author/:slug/'
-  tags: '/tag/:slug/'
-  categories: '/category/:slug/'
 disableAliases: true
 outputs:
   home: [HTML, RSS, JSON, WebAppManifest, headers, redirects]
@@ -63,3 +64,10 @@ related:
       weight: 100
     - name: categories
       weight: 70
+
+# prevent security error
+security:
+  funcs:
+    getenv:
+      - ^HUGO_
+      - ^WC_
