--- a/example/config/_default/languages.yaml
+++ b/example/config/_default/languages.yaml
@@ -1,15 +1,13 @@
 # Default language
 en:
   languageCode: en-us
+  title: Wowchemy Proto # Website name
   contentDir: content/en
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
-#  params:
-#    description: Site description in Chinese...
-#  menu:
-#    main:
-#      - name: 传
-#        url: '#about'
-#        weight: 1
+zh:
+  languageCode: zh
+  title: Wowchemy Proto
+  contentDir: content/zh-hans
+zh-Hant:
+  languageCode: zh-Hant
+  title: Wowchemy Proto
+  contentDir: content/zh-hant
