--- a/example/config/_default/params.zh-Hant.yaml
+++ b/example/config/_default/params.zh-Hant.yaml
@@ -1,11 +1,10 @@
-
 # Localization
 locale:
-  date_format: 'Jan 2, 2006'
+  date_format: '2006年1月1日'
 
 # Site footer
 footer:
-#  text: 'a footer static text'
+  #  text: 'a footer static text'
   copyright:
     notice: 'COPYRIGHT © {year} WOWCHEMY PROTO.'
 #  license:
