--- a/example/assets/jsconfig.json
+++ b/example/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "..\\..\\..\\..\\AppData\\Local\\Temp\\hugo_cache\\modules\\filecache\\modules\\pkg\\mod\\github.com\\alphabiz-se2\\wowchemy-proto@v0.1.1\\assets\\*"
+    "..\\..\\wowchemy-proto\\assets\\*"
    ]
   }
  }
