--- a/example/config/_default/menus.yaml
+++ b/example/config/_default/menus.yaml
@@ -1,7 +1,7 @@
 main:
-  - name: Home
+  - name: menu_item_home
     url: /
     weight: 10
-  - name: About
+  - name: menu_item_about
     url: about/
-    weight: 20
+    weight: 100
