--- a/example/config/_default/params.yaml
+++ b/example/config/_default/params.yaml
@@ -6,9 +6,9 @@
 ########################################################################################################################
 
 # Appearance
-#appearance:
-#  theme_day: 1950s
-#  theme_night: 1950s
+appearance:
+  theme_day: Minimal
+  theme_night: Minimal
 font_size: L
 
 # Site header
@@ -23,6 +23,7 @@ header:
     show_search: true
     show_logo: true
 
+# external js
 plugins_js:
   []
 plugins_vendor:
@@ -30,31 +31,37 @@ plugins_vendor:
 
 # contact footer
 contact:
-  - type: email
-    val: 'aws@alpha.biz'
+#  email: 'aws@alpha.biz'
+  github: 'https://github.com/'
+#  twitter: 'https://twitter.com/Chipchain_Co'
+#  linkedin: 'https://www.linkedin.com/company/chipchain/'
+#  facebook: 'https://www.facebook.com/Chipchain.Co'
 
-  - type: github
-    val: 'https://github.com/'
-
-  - type: twitter
-    val: 'https://twitter.com/home'
-
-########################################################################################################################
-
+# cms config
 cms:
   branch: main
   local_backend: false
 
-sharing: false # blog share
+########################################################################################################################
 
-# contact widget links
-email:
-phone:
-address:
-  street:
-directions:
-office_hours:
-appointment_url:
+sharing: false # post share
+
+# contact widget params
+#email:
+#phone: +86 139-2841-8769‬
+#address:
+#  street: Room 3003B, Tower A, GALAXY WORLD, No.1 Yabao Road, Bantian Street, Longgang District
+#  city: Shenzhen
+#  region:
+#  postcode:
+#  country: China
+#directions:
+#office_hours:
+#appointment_url:
+#map:
+#  provider: ''
+#  api_key: ''
+#  zoom: 15
 
 ########################################################################################################################
 
@@ -116,10 +123,6 @@ search:
     api_key: ''
     index_name: ''
     show_logo: false
-map:
-  provider: ''
-  api_key: ''
-  zoom: 15
 marketing:
   google_analytics: ''
   google_tag_manager: ''
